--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'orml'
 
-include 'orml-blasepose', 'orml-facemesh', 'orml-ssd', 'orml-utils'
+include 'orml-blazepose', 'orml-facemesh', 'orml-ssd', 'orml-utils'
