Fix bintray package name in release actions

--- a/.github/workflows/release-candidate-to-bintray.yml
+++ b/.github/workflows/release-candidate-to-bintray.yml
@@ -21,7 +21,7 @@ jobs:
           cd ~/.m2/repository
           zip release.zip org/openrndr/orml/*/${{ steps.get_version.outputs.VERSION }}/*
           curl -u ${{ secrets.BINTRAY_USER }}:${{ secrets.BINTRAY_KEY }} -X PUT https://api.bintray.com/content/openrndr/openrndr/ \
-            -H "X-Bintray-Package:orx" \
+            -H "X-Bintray-Package:orml" \
             -H "X-Bintray-Version:${{ steps.get_version.outputs.VERSION }}" \
             -H "X-Bintray-Publish:1" \
             -H "X-Bintray-Override:1" \
