--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,7 @@
 rootProject.name = 'orml'
 
-include 'orml-blazepose', 'orml-facemesh', 'orml-ssd', 'orml-utils'
+include 'orml-blazepose',
+        'orml-dbface',
+        'orml-facemesh',
+        'orml-ssd',
+        'orml-utils'
