--- a/orml-blazepose/build.gradle
+++ b/orml-blazepose/build.gradle
@@ -11,7 +11,7 @@ sourceSets {
 dependencies {
     implementation("org.openrndr.extra:orx-tensorflow:$orxVersion")
     implementation(project(":orml-utils"))
-    demoRuntimeOnly("org.openrndr.extra:orx-tensorflow-natives-$openrndrOS:$orxVersion")
+    demoRuntimeOnly("org.openrndr.extra:$orxTensorflowBackend-natives-$openrndrOS:$orxVersion")
 
     demoImplementation("org.openrndr:openrndr-core:$openrndrVersion")
     demoImplementation("org.openrndr:openrndr-extensions:$openrndrVersion")
