--- a/orml-facemesh/build.gradle
+++ b/orml-facemesh/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     implementation(project(":orml-utils"))
     implementation("org.openrndr.extra:orx-tensorflow:$orxVersion")
 
-    demoRuntimeOnly("org.openrndr.extra:orx-tensorflow-mkl-natives-$openrndrOS:$orxVersion")
+    demoRuntimeOnly("org.openrndr.extra:$orxTensorflowBackend-natives-$openrndrOS:$orxVersion")
 
     demoImplementation("org.openrndr:openrndr-core:$openrndrVersion")
     demoImplementation("org.openrndr:openrndr-extensions:$openrndrVersion")
