--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ rootProject.name = 'orml'
 include 'orml-blazepose',
         'orml-dbface',
         'orml-facemesh',
+        'orml-image-classifier',
         'orml-ssd',
         'orml-style-transfer',
         'orml-utils'
