--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include 'orml-blazepose',
         'orml-dbface',
         'orml-facemesh',
         'orml-image-classifier',
+        'orml-psenet',
         'orml-ssd',
         'orml-style-transfer',
         'orml-utils'
