--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,7 @@ include 'orml-biggan',
         'orml-psenet',
         'orml-ssd',
         'orml-style-transfer',
+        'orml-super-resolution',
         'orml-u2net',
         'orml-utils'
 
