--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'orml'
 
 include 'orml-biggan',
         'orml-blazepose',
+        'orml-bodypix',
         'orml-dbface',
         'orml-facemesh',
         'orml-image-classifier',
