Add model fetcher

--- a/build.gradle
+++ b/build.gradle
@@ -83,7 +83,7 @@ allprojects {
         implementation "org.openrndr:openrndr-filter:$openrndrVersion"
         implementation "org.openrndr:openrndr-shape:$openrndrVersion"
         implementation "org.tensorflow:tensorflow-core-api:0.3.1"
-        implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '1.5.0-RC'
+        implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '1.5.0'
         testImplementation "org.spekframework.spek2:spek-dsl-jvm:$spekVersion"
         testImplementation "org.amshove.kluent:kluent:1.65"
         testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlinVersion"
