--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,7 +22,7 @@ title: ORML
 email: info@openrndr.org
 description: >- # this means to ignore newlines until "baseurl:"
   Documentation for ORML
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/orml" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: openrndr
 github_username: openrndr
