--- a/.github/workflows/markdown-to-jekyll.yml
+++ b/.github/workflows/markdown-to-jekyll.yml
@@ -17,4 +17,4 @@ jobs:
         run: |
           git config --global user.email "actions@openrndr.org"
           git config --global user.name "OPENRNDR Actions"
-          (git add jekyll/*.markdown && git commit -m "add auto-generated jekyll input" && git push origin orml-0.3) || true
+          (git add docs/*.markdown && git commit -m "add auto-generated jekyll input" && git push origin orml-0.3) || true
