--- a/orml-utils/build.gradle
+++ b/orml-utils/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.1'
 
     implementation("org.openrndr.extra:orx-tensorflow:$orxVersion")
+    implementation("org.openrndr:openrndr-draw:$openrndrVersion")
+    implementation("org.openrndr:openrndr-application:$openrndrVersion")
 
 //    demoRuntimeOnly("org.openrndr.extra:$orxTensorflowBackend-natives-$openrndrOS:$orxVersion")
 //
