--- a/orml-blazepose/build.gradle
+++ b/orml-blazepose/build.gradle
@@ -10,14 +10,17 @@ sourceSets {
 
 dependencies {
     implementation("org.openrndr.extra:orx-tensorflow:$orxVersion") {
-        exclude group:'org.bytedeco', module:'javacpp'
+        //exclude group:'org.bytedeco', module:'javacpp'
+
     }
-
-
+    implementation("org.openrndr:openrndr-color:$openrndrVersion")
+    implementation("org.openrndr:openrndr-draw:$openrndrVersion")
+    implementation("org.openrndr:openrndr-math:$openrndrVersion")
+    implementation("org.openrndr:openrndr-application:$openrndrVersion")
     implementation(project(":orml-utils"))
     demoRuntimeOnly("org.openrndr.extra:$orxTensorflowBackend-natives-$openrndrOS:$orxVersion")
 
-    demoImplementation("org.openrndr:openrndr-core:$openrndrVersion")
+    demoImplementation("org.openrndr:openrndr-draw:$openrndrVersion")
     demoImplementation("org.openrndr:openrndr-extensions:$openrndrVersion")
     demoImplementation("org.openrndr:openrndr-ffmpeg:$openrndrVersion")
 
