--- a/orml-bodypix/build.gradle
+++ b/orml-bodypix/build.gradle
@@ -12,6 +12,8 @@ dependencies {
     implementation(project(":orml-ssd"))
     implementation(project(":orml-utils"))
     implementation("org.openrndr.extra:orx-tensorflow:$orxVersion")
+    implementation("org.openrndr:openrndr-application:$openrndrVersion")
+    implementation("org.openrndr:openrndr-draw:$openrndrVersion")
 
     demoRuntimeOnly("org.openrndr.extra:$orxTensorflowBackend-natives-$openrndrOS:$orxVersion")
 
