--- a/orml-u2net/build.gradle
+++ b/orml-u2net/build.gradle
@@ -11,6 +11,9 @@ sourceSets {
 dependencies {
     implementation("org.openrndr.extra:orx-tensorflow:$orxVersion")
     implementation(project(":orml-utils"))
+    implementation("org.openrndr:openrndr-draw:$openrndrVersion")
+    implementation("org.openrndr:openrndr-application:$openrndrVersion")
+
     demoRuntimeOnly("org.openrndr.extra:$orxTensorflowBackend-natives-$openrndrOS:$orxVersion")
 
     demoImplementation("org.openrndr:openrndr-core:$openrndrVersion")
