--- a/.github/workflows/build-on-commit.yml
+++ b/.github/workflows/build-on-commit.yml
@@ -8,36 +8,63 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/cache@v2
-        with:
-          path: |
-            ~/openrndr
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-      - uses: actions/checkout@v2.3.4
-        with:
-          repository: openrndr/openrndr
-          path: ./openrndr
-          ref: master
-      - uses: actions/checkout@v2.3.4
-        with:
-          repository: openrndr/orx
-          path: ./orx
-          ref: master
-      - uses: actions/checkout@v2.3.4
-        with:
-          path: orml
+      # setup java
       - uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
           java-version: '16'
-      - name: Build OPENRNDR snapshot
+
+      # Get OPENRNDR
+      - name: Get OPENRNDR HEAD ref
+        run: echo "OPENRNDR_HEAD=$(git ls-remote https://github.com/openrndr/openrndr HEAD | awk '{print $1}')" >> $GITHUB_ENV
+      - uses: actions/cache@v2
+        id: cache_openrndr
+        with:
+          path: |
+            ~/openrndr
+          key: ${{ runner.os }}-openrndr-${{ env.OPENRNDR_HEAD }}
+      - uses:  actions/checkout@v2.3.4
+        if: steps.cache_openrndr.outputs.cache-hit != 'true'
+        with:
+          repository: openrndr/openrndr
+          path: ./openrndr
+          ref: master
+      - name: Publish OPENRNDR snapshot
         run: |
           cd ./openrndr
           ./gradlew publishToMavenLocal -Prelease.version=0.5.1-SNAPSHOT
           cd ..
-      - name: Build ORX
+
+      # Get ORX
+      - name: Get ORX HEAD ref
+        run: echo "ORX_HEAD=$(git ls-remote https://github.com/openrndr/orx HEAD | awk '{print $1}')" >> $GITHUB_ENV
+      - uses: actions/cache@v2
+        id: cache_orx
+        with:
+          path: |
+            ~/orx
+          key: ${{ runner.os }}-orx-${{ env.ORX_HEAD }}
+      - uses:  actions/checkout@v2.3.4
+        if: steps.cache_openrndr.outputs.cache-hit != 'true'
+        with:
+          repository: openrndr/orx
+          path: ./orx
+          ref: master
+      - name: Publish ORX snapshot
         run: |
-          cd ./orx
-          ./gradlew build
+          cd ./openrndr
+          ./gradlew publishToMavenLocal -Prelease.version=0.5.1-SNAPSHOT
+          cd ..
+
+      # Get ORML
+      - uses:  actions/checkout@v2.3.4
+        with:
+          repository: openrndr/orml
+          path: ./orml
+          ref: master
+
+      - name: Build ORML snapshot
+        run: |
+          cd ./orml
+          ./gradlew publishToMavenLocal -Prelease.version=0.5.1-SNAPSHOT
+          cd ..
